// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateParserModel native.ts getBoolean 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "type": "boolean",
  },
}
`;

exports[`generateParserModel native.ts getNumber 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "type": "number",
  },
}
`;

exports[`generateParserModel native.ts getString 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "type": "string",
  },
}
`;
